--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-redux": "^7.1.33",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
